--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,11 @@
     background-color: grey;
     padding: 5px;
     text-align: center;
-    position: absolute;
+    position: fixed;
+    right: 0;
     bottom: 0;
+    left: 0;
     width: 100%;
-    align-self: flex-end;
   }
 
   .topBar {
