changed select input on register page to make it smaller and added * to all required components

--- a/src/components/Register/register.css
+++ b/src/components/Register/register.css
@@ -14,6 +14,11 @@
   box-sizing: border-box;
 }
 
+.dietInput, .physInput{
+  width: 8%;
+}
+
+
 .button{
     width: 10%;
     align-content: center;
