--- a/src/components/Index/index.css
+++ b/src/components/Index/index.css
@@ -1,14 +1,10 @@
-.indexHeader{
-    border-style: hidden;
-    border-width: 100%;
-}
-
-.hackerRow{
+.hackerRow, .indexRow{
     display: -webkit-flex;
     display: flex;
 }
 
-.hackerDiv{
+
+.hackerDiv, .hackerHeader{
     -webkit-flex: 1;
     -ms-flex: 1;
     border-style: hidden;
@@ -16,7 +12,7 @@
     text-align: left;
 }
 
-.hackerInfo{
+.hackerInfo, .dataHeader{
     -webkit-flex: 1;
     -ms-flex: 1;
     border-style: hidden;
